// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-eiNpmX cyCloi"
>
  <div
    className="sc-bTeyqo cwwVaA"
    role="progressbar"
    size="medium"
  >
    <span
      className="sc-fTppNL jPmVMn"
      size="medium"
    />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="sc-eiNpmX cyCloi"
>
  <div
    className="sc-bTeyqo cwwVaA"
    role="progressbar"
    size="medium"
  >
    <span
      className="sc-fTppNL jPmVMn"
      size="medium"
    />
  </div>
  <div
    className="sc-bTeyqo cwwVaA"
    role="progressbar"
    size="medium"
  >
    <span
      className="sc-fTppNL kVTEQn"
      color="dodoria.100"
      size="medium"
    />
  </div>
  <div
    className="sc-bTeyqo cwwVaA"
    role="progressbar"
    size="medium"
  >
    <span
      className="sc-fTppNL fDVLGL"
      color="trunks.100"
      size="medium"
    />
  </div>
  <div
    className="sc-bTeyqo cwwVaA"
    role="progressbar"
    size="medium"
  >
    <span
      className="sc-fTppNL dDWZwn"
      color="#663399"
      size="medium"
    />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="sc-eiNpmX cyCloi"
>
  <div
    className="sc-bTeyqo leOHKQ"
    role="progressbar"
    size="twoxsmall"
  >
    <span
      className="sc-fTppNL kHyOFQ"
      size="twoxsmall"
    />
  </div>
  <div
    className="sc-bTeyqo gDIotU"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="sc-fTppNL jPmVMn"
      size="xsmall"
    />
  </div>
  <div
    className="sc-bTeyqo cnFazw"
    role="progressbar"
    size="small"
  >
    <span
      className="sc-fTppNL ijwvEO"
      size="small"
    />
  </div>
  <div
    className="sc-bTeyqo cwwVaA"
    role="progressbar"
    size="medium"
  >
    <span
      className="sc-fTppNL jPmVMn"
      size="medium"
    />
  </div>
  <div
    className="sc-bTeyqo iZKERU"
    role="progressbar"
    size="large"
  >
    <span
      className="sc-fTppNL iecqDa"
      size="large"
    />
  </div>
</div>
`;
